--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,6 +79,7 @@ b {
 }
 a {
 	color: var(--accent);
+	text-decoration: none;
 }
 a:hover {
 	color: var(--accent);
@@ -88,6 +89,11 @@ p {
 }
 .prose p {
 	margin-bottom: 2em;
+}
+ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 textarea {
 	width: 100%;
