--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,9 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 
+@import './base.css';
+@import './lang.css';
+
 :root {
 	--accent: #2337ff;
 	--accent-dark: #000d8a;
@@ -84,12 +87,6 @@ a {
 a:hover {
 	color: var(--accent);
 }
-p {
-	margin-bottom: 1em;
-}
-.prose p {
-	margin-bottom: 2em;
-}
 ul {
 	margin: 0;
 	padding: 0;
@@ -157,4 +154,88 @@ hr {
 	clip-path: inset(50%);
 	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
+}
+
+
+
+/** 나중에 지울 것 **/
+main {
+	width: 960px;
+}
+ul {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2rem;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+ul li {
+	width: calc(50% - 1rem);
+}
+ul li * {
+	text-decoration: none;
+	transition: 0.2s ease;
+}
+ul li:first-child {
+	width: 100%;
+	margin-bottom: 1rem;
+	text-align: center;
+}
+ul li:first-child img {
+	width: 100%;
+}
+ul li:first-child .title {
+	font-size: 2.369rem;
+}
+ul li img {
+	margin-bottom: 0.5rem;
+	border-radius: 12px;
+}
+ul li a {
+	display: block;
+}
+.title {
+	margin: 0;
+	color: rgb(var(--black));
+	line-height: 1;
+}
+.date {
+	margin: 0;
+	color: rgb(var(--gray));
+}
+ul li a:hover h4,
+ul li a:hover .date {
+	color: rgb(var(--accent));
+}
+ul a:hover img {
+	box-shadow: var(--box-shadow);
+}
+@media (max-width: 720px) {
+	ul {
+		gap: 0.5em;
+	}
+
+	ul li {
+		width: 100%;
+		text-align: center;
+	}
+
+	ul li:first-child {
+		margin-bottom: 0;
+	}
+
+	ul li:first-child .title {
+		font-size: 1.563em;
+	}
+}
+
+code {
+	display: block;
+	margin: 5px 0;
+	padding: 15px 20px;
+	background-color: #000000;
+	color: #FFFFFF;
+	border-radius: 6px;
+	font-size: 14px;
 }
