--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -11,15 +11,23 @@ const isActive = href === pathname || href === '/' + subpath?.[0];
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
+  <slot />
 </a>
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+  a {
+    display: inline-block;
+    padding: 0 10px;
+    color: #333333;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  a.active {
+    font-weight: bolder;
+  }
+
+  a:hover {
+    background-color: #333333;
+    color: #ffffff;
+    border-radius: 6px;
+  }
 </style>
