--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Toast from '../components/Toaster';
+import Navigation from '../components/Navigation.astro';
 ---
 
 <html>
@@ -11,10 +12,13 @@ import Toast from '../components/Toaster';
   </head>
   <body>
     <Header />
-    <div class="p-[20px]">
-      <slot />
+    <div class="flex contents-wrapper">
+      <Navigation />
+      <div class="overflow-hidden">
+        <slot />
+      </div>
     </div>
-    <Footer />
+    <!--<Footer />-->
     <Toast client:load />
   </body>
 </html>
