--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,9 +6,10 @@
 
 @import './base.css';
 @import './lang.css';
+@import './md.scss';
 
 :root {
-	--accent: #2337ff;
+	--accent: #3057a6;
 	--accent-dark: #000d8a;
 	--black: 15, 18, 25;
 	--gray: 96, 115, 159;
@@ -34,6 +35,7 @@
 }
 body {
 	font-family: 'Atkinson', sans-serif;
+	height: 100vh;
 	margin: 0;
 	padding: 0;
 	text-align: left;
@@ -44,6 +46,7 @@ body {
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
 	line-height: 1.7;
+	overflow: hidden;
 }
 main {
 	width: 720px;
@@ -119,16 +122,20 @@ pre {
 pre > code {
 	all: unset;
 }
-blockquote {
-	border-left: 4px solid var(--accent);
-	padding: 0 0 0 20px;
-	margin: 0px;
-	font-size: 1.333em;
-}
+
 hr {
 	border: none;
 	border-top: 1px solid rgb(var(--gray-light));
 }
+
+.contents-height {
+	height: calc(100vh - 36px);
+}
+
+.inner-contents-height {
+	height: calc(100vh - 36px - 20px);
+}
+
 @media (max-width: 720px) {
 	body {
 		font-size: 18px;
@@ -156,61 +163,10 @@ hr {
 	white-space: nowrap;
 }
 
+*::-webkit-scrollbar {
+	display: none; /* for Chrome, Safari, and Opera */
+}
 
-
-/** 나중에 지울 것 **/
-main {
-	width: 960px;
-}
-ul {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 2rem;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-ul li {
-	width: calc(50% - 1rem);
-}
-ul li * {
-	text-decoration: none;
-	transition: 0.2s ease;
-}
-ul li:first-child {
-	width: 100%;
-	margin-bottom: 1rem;
-	text-align: center;
-}
-ul li:first-child img {
-	width: 100%;
-}
-ul li:first-child .title {
-	font-size: 2.369rem;
-}
-ul li img {
-	margin-bottom: 0.5rem;
-	border-radius: 12px;
-}
-ul li a {
-	display: block;
-}
-.title {
-	margin: 0;
-	color: rgb(var(--black));
-	line-height: 1;
-}
-.date {
-	margin: 0;
-	color: rgb(var(--gray));
-}
-ul li a:hover h4,
-ul li a:hover .date {
-	color: rgb(var(--accent));
-}
-ul a:hover img {
-	box-shadow: var(--box-shadow);
-}
 @media (max-width: 720px) {
 	ul {
 		gap: 0.5em;
