--- a/src/pages/rxjs/[...slug].astro
+++ b/src/pages/rxjs/[...slug].astro
@@ -19,7 +19,7 @@ const { Content } = await post.render();
 
 <DefaultLayout>
   <div class="post flex">
-    <div class="p-[20px] inner-contents-height overflow-scroll">
+    <div class="min-w-[400px] p-[20px] inner-contents-height overflow-scroll">
       <Content />
     </div>
     <div class="divider vertical"></div>
