--- a/src/practice/rxjs/index.astro
+++ b/src/practice/rxjs/index.astro
@@ -1,10 +1,12 @@
 ---
 import FirstRxjs from './first-rxjs.astro';
+import RxjsObservables from './rxjs-observables.astro';
 
 const props = Astro.props;
 
 const rxjsComponent = {
   'first-rxjs': FirstRxjs,
+  'rxjs-observables': RxjsObservables,
 };
 
 const component = () => {
