--- a/src/styles/md.scss
+++ b/src/styles/md.scss
@@ -59,6 +59,10 @@
     margin-bottom: 15px;
   }
 
+  li {
+    list-style: circle;
+  }
+
   .divider.vertical {
     min-width: 1px;
     background-color: #4b4b4b;
