--- a/src/practice/rxjs/rxjs-observables.astro
+++ b/src/practice/rxjs/rxjs-observables.astro
@@ -2,9 +2,17 @@
 
 ---
 
-<h2>RxJS Observables</h2>
-<p>Click the button to subscribe to an observable and display the values.</p>
-<button id="ObservableButton" class="default-button">Subscribe</button>
+<div class="mb-[30px]">
+  <h2>RxJS Observables</h2>
+  <p>Click the button to subscribe to an observable and display the values.</p>
+  <button id="ObservableButton" class="default-button">Subscribe</button>
+</div>
+
+<div class="mb-[30px]">
+  <h2>Observables as generalizations of functions</h2>
+  <button id="ObservableX" class="default-button">X Button</button>
+  <button id="ObservableY" class="default-button">Y Button</button>
+</div>
 
 <script>
   import { Observable } from 'rxjs';
@@ -35,5 +43,34 @@
   };
 
   const button = document.getElementById('ObservableButton');
-  button.addEventListener('click', handleClick);
+  button?.addEventListener('click', handleClick);
 </script>
+
+<script>
+  import { Observable } from 'rxjs';
+  import { toast } from 'sonner';
+
+  const xButton = document.getElementById('ObservableX');
+  const yButton = document.getElementById('ObservableY');
+  
+  const foo = new Observable((subscriber) => {
+    toast.success('Hello');
+    subscriber.next(42);
+  })
+
+  const handleClickXButton = () => {
+    foo.subscribe((x) => {
+      toast.success(x);
+    })
+  }
+
+  const handleClickYButton = () => {
+    foo.subscribe((y) => {
+      toast.success(y);
+    })
+  }
+
+  xButton?.addEventListener('click', handleClickXButton);
+  yButton?.addEventListener('click', handleClickYButton);
+</script>
+
