feat: db 제거 빌드 수정

--- a/src/pages/rxjs/[...slug].astro
+++ b/src/pages/rxjs/[...slug].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import { type CollectionEntry, getCollection } from 'astro:content';
 import DefaultLayout from '../../layouts/DefaultLayout.astro';
 import Practice from '../../practice/rxjs/index.astro';
