--- a/src/practice/rxjs/first-rxjs.astro
+++ b/src/practice/rxjs/first-rxjs.astro
@@ -1,5 +1,5 @@
 ---
-export const prerender = true;
+export const prerender = false;
 import ScrollToId from '../../utils/ScrollToId.astro';
 ---
 
@@ -59,6 +59,7 @@ import ScrollToId from '../../utils/ScrollToId.astro';
 </div>
 
 <script>
+  if (!window || !document) return;
   import { toast } from 'sonner';
   import { fromEvent, scan, throttleTime } from 'rxjs';
 
@@ -71,6 +72,7 @@ import ScrollToId from '../../utils/ScrollToId.astro';
 </script>
 
 <script>
+  if (!window || !document) return;
   import { fromEvent, scan, throttleTime } from 'rxjs';
   import { toast } from 'sonner';
 
@@ -87,6 +89,7 @@ import ScrollToId from '../../utils/ScrollToId.astro';
 </script>
 
 <script>
+  if (!window || !document) return;
   import { fromEvent, scan, throttleTime } from 'rxjs';
   import { toast } from 'sonner';
 
@@ -113,6 +116,7 @@ import ScrollToId from '../../utils/ScrollToId.astro';
 </script>
 
 <script>
+  if (!window || !document) return;
   import { fromEvent, throttleTime, map, scan } from 'rxjs';
   import { toast } from 'sonner';
 
