--- a/src/practice/rxjs/rxjs-observables.astro
+++ b/src/practice/rxjs/rxjs-observables.astro
@@ -15,7 +15,7 @@ export const prerender = false;
 </div>
 
 <script>
-  if (!window || !document) return;
+  // if (!window || !document) return;
   import { Observable } from 'rxjs';
   import { toast } from 'sonner';
 
@@ -48,7 +48,7 @@ export const prerender = false;
 </script>
 
 <script>
-  if (!window || !document) return;
+  // if (!window || !document) return;
   import { Observable } from 'rxjs';
   import { toast } from 'sonner';
 
