--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -4,11 +4,13 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Toast from '../components/Toaster';
 import Navigation from '../components/Navigation.astro';
+import { ViewTransitions } from 'astro:transitions';
 ---
 
 <html>
   <head>
     <BaseHead title="HI" description="HELLO" />
+    <ViewTransitions />
   </head>
   <body>
     <Header />
