feat: astro 문서 작성

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,6 +6,7 @@ import HeaderLink from './HeaderLink.astro';
   <div>
     <HeaderLink href="/">Home</HeaderLink>
     <HeaderLink href="/rxjs">RxJS</HeaderLink>
+    <HeaderLink href="/astro">Astro</HeaderLink>
   </div>
 </nav>
 
