feat: view transition 문서 업데이트

--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -10,6 +10,13 @@ import { ViewTransitions } from 'astro:transitions';
 <html>
   <head>
     <BaseHead title="HI" description="HELLO" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.6.1/github-markdown-dark.css"
+      integrity="sha512-zb2pp+R+czM7GAemdSUQt6jFmr3qCo6ikvBgVU6F5GvwEDR0C2sefFiPEJ9QUpmAKdD5EqDUdNRtbOYnbF/eyQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <ViewTransitions />
   </head>
   <body>
